# mcp-hub-services

./: .gitignore  Cargo.toml  PROGRESS.md  README.md
src/: main.rs
src/hub/: mod.rs  router.rs
src/mcp/: dispatch.rs  mod.rs
src/models/: mod.rs  node.rs
src/proxy/: forwarder.rs  mod.rs
src/registry/: mod.rs  store.rs
